--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -25,5 +25,13 @@
               #{v.round(1)}
               
     
-    = line_chart [{name: 'Temperature', data: SensorObservation.where( sensor_id: 1 ).where( "observed_at > ?", Time.now.in_time_zone.beginning_of_day ).collect{ |so| [so.observed_at, so.value * (9.0/5.0) + 32.0] }, library: {lineTension: 0, pointRadius: 0}}]
+    .row
+      .col-xs-12
+        = line_chart [{name: 'Temperature', data: SensorObservation.where( sensor_id: 1 ).where( "observed_at > ?", Time.now.in_time_zone.beginning_of_day ).collect{ |so| [so.observed_at, so.value * (9.0/5.0) + 32.0] }, library: {lineTension: 0, pointRadius: 0}}]
     
+    .row
+      .col-xs-12
+        = line_chart [{name: 'High Temperature', data: SensorObservation.where( sensor_id: 1 ).where( "observed_at > ?", 90.days.ago ).group_by_day(:observed_at).maximum(:value).collect{ |k,v| [k, v * (9.0/5.0) + 32.0] }, library: {lineTension: 0, pointRadius: 0}}, {name: 'Low Temperature', data: SensorObservation.where( sensor_id: 1 ).where( "observed_at > ?", 90.days.ago ).group_by_day(:observed_at).minimum(:value).collect{ |k,v| [k, v * (9.0/5.0) + 32.0] }, library: {lineTension: 0, pointRadius: 0}}], colors: [ '#dc5228', '#286fdc' ]
+        
+      
+          
