--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -27,7 +27,7 @@
     
     .row
       .col-xs-12
-        = line_chart [{name: 'Temperature', data: SensorObservation.where( sensor_id: 1 ).where( "observed_at > ?", Time.now.in_time_zone.beginning_of_day ).collect{ |so| [so.observed_at, so.value * (9.0/5.0) + 32.0] }, library: {lineTension: 0, pointRadius: 0}}]
+        = line_chart [{name: 'Temperature', data: SensorObservation.where( sensor_id: 1 ).where( "observed_at > ?", Time.now.in_time_zone - 2.days ).collect{ |so| [so.observed_at, so.value * (9.0/5.0) + 32.0] }, library: {lineTension: 0, pointRadius: 0}}]
     
     .row
       .col-xs-12
