--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -37,14 +37,14 @@
         %h2 
           Recent Temperature
       
-        = line_chart recent_temperatures_for_chart_path, min: 30, max: 90, library: {responsive: true, scales: { yAxes: [{ ticks:{ stepSize: 10 } }] }}
+        = line_chart recent_temperatures_for_chart_path, min: 30, max: 90, library: {responsive: true, scales: { yAxes: [{ ticks:{ stepSize: 10 } }], xAxes: [{gridLines: { display: true, lineWidth: 1, drawOnChartArea: true  }}] }}
     
     .row
       .col-xs-12
         %h2 
           Recent Highs/Lows
         
-        = line_chart recent_highs_and_lows_for_chart_path, min: 30, max: 120, library: { responsive: true, scales: { yAxes: [{ ticks:{ stepSize: 10 } }] } },colors: [ '#dc5228', '#286fdc', '#28dc96' ]
+        = line_chart recent_highs_and_lows_for_chart_path, min: 30, max: 120, library: { responsive: true, scales: { yAxes: [{ ticks:{ stepSize: 10 } }], xAxes: [{gridLines: { display: true, lineWidth: 1, drawOnChartArea: true }}] } }, colors: [ '#dc5228', '#286fdc', '#28dc96' ]
         
       
           
