Stub in climate controller.

--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -12,4 +12,7 @@
     .collapse.navbar-collapse#navbar-collapse
       %ul.nav.navbar-nav
         %li
-          = link_to "Current Conditions", "/"
+          = link_to "Current Conditions", root_path
+        
+        %li
+          = link_to "Climate", climate_path
