--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -14,7 +14,7 @@
                 %th
                   Humidity
                 %td
-                  #{Sensor.find(3).latest_value.round(0)}%
+                  #{Sensor.find(3).latest_value&.round(0)}%
               %tr
                 %th
                   Dewpoint
@@ -24,7 +24,7 @@
                 %th
                   Pressure
                 %td
-                  #{Sensor.find(2).latest_value.round(0)}
+                  #{Sensor.find(2).latest_value&.round(0)}
   
     .row
       .col-xs-12
