--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -41,4 +41,9 @@
         = line_chart recent_highs_and_lows_graph_data_path, min: 30, max: 120, library: { responsive: true, scales: { yAxes: [{ ticks:{ stepSize: 10 } }], xAxes: [{gridLines: { display: true, lineWidth: 1, drawOnChartArea: true }}] } }, colors: [ '#dc5228', '#286fdc', '#28dc96' ]
         
       
-          
+    .row
+      .col-xs-12
+        %h2 
+          Recent Dewpoints
+      
+        = line_chart recent_dewpoints_graph_data_path, min: 20, max: 75, library: {responsive: true, scales: { yAxes: [{ ticks:{ stepSize: 5 } }], xAxes: [{gridLines: { display: true, lineWidth: 1, drawOnChartArea: true  }}] }}
