--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -46,4 +46,4 @@
         %h2 
           Recent Dewpoints
       
-        = line_chart recent_dewpoints_graph_data_path, min: 20, max: 80\, library: {responsive: true, scales: { yAxes: [{ ticks:{ stepSize: 5 } }], xAxes: [{gridLines: { display: true, lineWidth: 1, drawOnChartArea: true  }}] }}
+        = line_chart recent_dewpoints_graph_data_path, min: 20, max: 80, library: {responsive: true, scales: { yAxes: [{ ticks:{ stepSize: 5 } }], xAxes: [{gridLines: { display: true, lineWidth: 1, drawOnChartArea: true  }}] }}
