Update graph colors and sort of auto-scale the recent temps graphs.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -30,15 +30,18 @@
       .col-xs-12
         %h2 
           Recent Temperature
+        
+        - min_by_month  = [20, 30,  40,  40,  50,  60,  60,  60,  50,  40,  30, 30]
+        - high_by_month = [90, 90, 100, 100, 115, 120, 120, 120, 120, 105, 100, 90]
       
-        = line_chart recent_temperatures_graph_data_path, min: 30, max: 90, library: {responsive: true, scales: { yAxes: [{ ticks:{ stepSize: 10 } }], xAxes: [{gridLines: { display: true, lineWidth: 1, drawOnChartArea: true  }}] }}
+        = line_chart recent_temperatures_graph_data_path, min: min_by_month[Time.now.month], max: high_by_month[Time.now.month], library: {responsive: true, scales: { yAxes: [{ ticks:{ stepSize: 10 } }], xAxes: [{gridLines: { display: true, lineWidth: 1, drawOnChartArea: true  }}] }}
     
     .row
       .col-xs-12
         %h2 
           Recent Highs/Lows
         
-        = line_chart recent_highs_and_lows_graph_data_path, min: 40, max: 105, library: { responsive: true, scales: { yAxes: [{ ticks:{ stepSize: 10 } }], xAxes: [{gridLines: { display: true, lineWidth: 1, drawOnChartArea: true }}] } }, colors: [ '#dc5228', '#286fdc', '#28dc96' ]
+        = line_chart recent_highs_and_lows_graph_data_path, min: min_by_month[Time.now.month], max: high_by_month[Time.now.month], library: { responsive: true, scales: { yAxes: [{ ticks:{ stepSize: 10 } }], xAxes: [{gridLines: { display: true, lineWidth: 1, drawOnChartArea: true }}] } }, colors: [ '#dc5228', '#286fdc', '#28dc96' ]
         
       
     .row
